@startuml
class Alumno {
    String nombre
    String apellido1
    String apellido2
    LocalDate fechaNacimiento
    {static} String centroEducativo

    mostrar()
    String getUsername()
    getIniciales()
    boolean matricula(Alumno a)

    {static} String getCentroEducativo()    
    {static} setCentroEducativo()
}


class Modulo {
    byte curso
    String codigo
    String nombre
    short horas
    byte periodosSemanais

    String mostrar()
    boolean hayAlumnado()
    double getSesiones()
    boolean estaMatriculado(Alumno a)
    boolean matricula(Alumno a)
}


Alumno "0..*" -- "0..*" Modulo : matriculado

class Pregunta {
    String enunciado
    String[] respuestas
    int respuestaCorrecta
}

class Examen {
    String titulo
}

Examen "*" o-- "*" Pregunta

@enduml